homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-ingress
  namespace: homelab
spec:
  ingressClassName: traefik
  rules:
  - host: jellyfin.homelab
    http:
      paths:
      - backend:
          service:
            name: jellyfin-service
            port:
              number: 8096
        path: /
      pathType: ImplementationSpecific
  - host: navidrome.homelab
    http:
      paths:
      - backend:
          service:
            name: navidrome-service
            port:
              number: 4533
        path: /
      pathType: ImplementationSpecific
